# Montelimar

./: .cursorrules  .env.example  .gitignore  .pre-commit-config.yaml  .prettierignore  CLAUDE.md  README.md  bun.lockb  check_build_needed.mjs  drizzle.config.ts  eslint.config.js  generate_icon_animation.sh  package.json  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: publish_macos.yml
scripts/: bump_version.sh
src/: app.css
src-python/: .gitignore  README.md  openapi.json  pyproject.toml
src-python/notebook/: test.ipynb
src-python/src/ocr_mlx/: cli.py  endpoint.py  export_openapi.py  llm_endpoint.py
src-python/src/ocr_mlx/inference/: generate.py
src-python/src/ocr_mlx/model/: donut.py  mbart.py  nougat.py
src-python/src/ocr_mlx/quantize/: convert.py
src-python/src/ocr_mlx/utils/: __init__.py  image_utils.py  llm_client.py
src-tauri/: .gitignore  Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: app.json  autostart.json  clipboard.json  default.json  event.json  fs.json  global-shortcut.json  http.json  image.json  log.json  menu.json  migrated.json  notification.json  path.json  resources.json  shell.json  sql.json  svelte.json  tray.json  webview.json  windows.json
src-tauri/icons/: icon.icns
src-tauri/src/: fns.rs  main.rs
src-tauri/src/app/: mod.rs
src-tauri/src/app/menubar/: mod.rs  tray.rs  utils.rs
src-tauri/src/app/spotlight/: mod.rs  utils.rs  windows.rs
src-tauri/src/commands/: menubar.rs  mod.rs  nougat.rs  ocr.rs  screenshot.rs  spotlight.rs
src-tauri/src/model/ocr/: core.rs  mod.rs
src-tauri/src/state/: app_state.rs
src/lib/: actions.ts  shortcut.ts  tray.ts
src/lib/components/: Header.svelte  Main.svelte  Settings.svelte
src/lib/components/custom/: Confetti.svelte  HuggingfaceHubSelector.svelte  InputShortcut.svelte  ModelSelection.svelte  ToggleConfetti.svelte
src/lib/components/icon/: logos--microsoft-icon.svg.svelte  logos--rust.svg.svelte  logos--svelte-icon.svg.svelte  logos--tailwindcss-icon.svg.svelte  logos--tauri.svg.svelte
src/lib/components/plugin/: AutoCopyClipboard.svelte  Autostart.svelte  DisableHistory.svelte  DisableRightClickMenu.svelte  ExecuteOnEscape.svelte  GlobalShortcut.svelte  InitSystemSettings.svelte  InitTauriLog.svelte  PlaySound.svelte  SQLiteMigration.svelte  SetupClient.svelte  ShowMenuBarIcon.svelte  StartCleanUpShortcut.svelte  StartDatabase.svelte
src/lib/components/settings/: AboutSection.svelte  GeneralSettings.svelte  LogViewer.svelte  ModelsList.svelte
src/lib/db/: index.ts  migrate.ts  schema.ts
src/lib/python/client/: sdk.gen.ts  types.gen.ts
src/lib/runes/: recordingState.svelte.ts  system_settings.svelte.ts  user_database.svelte.ts  user_settings.svelte.ts
src/lib/stores/: user_database.ts  user_settings.ts
src/lib/tauri/: bindings.ts
src/lib/types/: index.ts
src/routes/menubar/: +page.svelte
src/routes/spotlight/: +page.svelte
