[project]
name = "ocr_mlx"
version = "0.2.4"
description = "MLX package for support of the Nougat OCR model"
readme = "README.md"
authors = [
    { name = "Julien Blanchon", email = "julien@blanchon.cc" }
]
requires-python = ">=3.12"
dependencies = [
    "anyio>=4.7.0",
    "apscheduler>=3.11.0",
    "fastapi[standard]>=0.115.12",
    "hatch>=1.14.1",
    "huggingface-hub[hf-transfer]>=0.31.2",
    "mlx>=0.25.2",
    "pillow>=11.2.1",
    "pydantic>=2.11.4",
    "requests>=2.32.3",
    "transformers>=4.51.3",
    "typer>=0.15.4",
]


[tool.hatch.build.targets.wheel]
packages = ["src/ocr_mlx"]

[project.scripts]
ocr_mlx = "ocr_mlx.endpoint:main"

[project.optional-dependencies]
packaging = [
    "box-packager>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "box-packager>=0.4.0",
]

[tool.box]
builder = "hatch"
is_gui = false
app_entry = "ocr_mlx.endpoint:main"
entry_type = "spec"
python_version = "3.12"

[tool.box.env-vars]
PYAPP_UV_ENABLED = "true"
PYAPP_EXPOSE_METADATA = "false"
