[package]
name = "montelimar"
version = "0.1.0"
description = "Montelimar - OCR Simplified"
authors = ["Julien Blanchon <julien@blanchon.cc>"]
edition = "2021"
homepage = "https://x.com/JulienBlanchon"
license = "Apache License 2.0"
keywords = ["ocr", "screenshot", "macos", "application", "menubar", "ai"]
readme = "README.md"

[build-dependencies]
tauri-build = { version = "2.0.0-rc.7", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc.8", features = [ 
  "protocol-asset",
  "macos-private-api",
  "tray-icon",
  "image-png"
] }
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
thiserror = "2.0.9"
anyhow = "1.0.95"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
url = "2.5.4"
log = "0.4"
env_logger = "0.11.6"
ureq = "2.11.0"
home = "0.5.9"
specta = "=2.0.0-rc.20"
specta-typescript = "0.0.7"
tauri-specta = { version = "=2.0.0-rc.20", features = ["derive", "typescript"] }
tauri-plugin-shell = "2"
tauri-plugin-clipboard-manager = "2.0.2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-store = "2"
tauri-plugin-log = "2"
tauri-plugin-svelte = "0.1"
tauri-plugin-http = "2"
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
window-vibrancy = "0.5.2"
ocrs = "0.9.0"
image = "0.25.5"
rten = { version = "0.13.1" }
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", rev = "9beeb789809eac7cc171c7405888fd309aebad64" }
monitor = { git = "https://github.com/ahkohd/tauri-toolkit", rev = "f339123df704edd33dd235b9c41c8de9491778b1" }
menubar = { git = "https://github.com/ahkohd/tauri-toolkit", rev = "f339123df704edd33dd235b9c41c8de9491778b1" }
popover = { git = "https://github.com/ahkohd/tauri-toolkit", rev = "f339123df704edd33dd235b9c41c8de9491778b1" }
system-notification = { git = "https://github.com/ahkohd/tauri-toolkit", rev = "f339123df704edd33dd235b9c41c8de9491778b1" }
cocoa = { version = "0.26.0" }
objc = { version = "0.2.7" }
objc2-foundation = "0.2.2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

# [profile.dev]
# incremental = true # Compile your binary in smaller steps.

# [profile.release]
# codegen-units = 1 # Allows LLVM to perform better optimization.
# lto = true # Enables link-time-optimizations.
# opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
# panic = "abort" # Higher performance by disabling panic handlers.
# strip = true # Ensures debug symbols are removed.